src/test/ui/type-alias-impl-trait/issue-68368-non-defining-use.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-68368-non-defining-use.rs:7:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error: non-defining opaque type use in defining scope
  --> $DIR/issue-68368-non-defining-use.rs:11:15
   |
LL | fn f<'a>() -> Alias<'a, ()> {}
   |               ^^^^^^^^^^^^^
   |
note: used non-generic type `()` for generic parameter
  --> $DIR/issue-68368-non-defining-use.rs:10:16
   |
LL | type Alias<'a, U> = impl Trait<U>;
   |                ^

error: aborting due to previous error; 1 warning emitted

